generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model User {
  id        String    @id @default(uuid())
  name      String
  email     String    @unique
  password  String
  roles     UserRole[]
  articles  Article[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

model Role {
  id          String           @id @default(uuid())
  name        String           @unique
  description String?
  users       UserRole[]
  permissions RolePermission[]
}

model Permission {
  id          String           @id @default(uuid())
  name        String           @unique
  description String?
  roles       RolePermission[]
}

model UserRole {
  id     String @id @default(uuid())
  userId String
  roleId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  role   Role   @relation(fields: [roleId], references: [id], onDelete: Cascade)
  
  @@unique([userId, roleId])
}

model RolePermission {
  id           String @id @default(uuid())
  roleId       String
  permissionId String
  role         Role   @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission   Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)
  
  @@unique([roleId, permissionId])
}

model Category {
  id       String    @id @default(uuid())
  name     String    @unique
  articles Article[]
}

model Article {
  id         String   @id @default(uuid())
  title      String
  slug       String   @unique
  summary    String?
  content    String
  state      String?
  images     ArticleImage[]
  published  Boolean  @default(false)
  author     User     @relation(fields: [authorId], references: [id])
  authorId   String
  category   Category @relation(fields: [categoryId], references: [id])
  categoryId String
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
}


model ArticleImage {
  id        String   @id @default(uuid())
  url       String
  order     Int      @default(0)
  articleId String
  article   Article  @relation(fields: [articleId], references: [id], onDelete: Cascade)
}
